fix word wrapping on mobile

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -420,6 +420,7 @@ header {
     & > p {
       display: inline;
       padding: 0 1.5em 0 2em;
+      word-wrap: normal;
     }
   }
 
